# WideResearcher

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  start.py
app/: alembic.ini  config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2026_01_17_0845-ec0bb66cf4dd_.py  2026_01_25_1151-0de78b1de3e3_.py  2026_01_29_0839-5b1d3ac96638_.py  2026_01_30_1716-f82686fef541_.py  2026_03_21_1829-b4661bdf477c_.py  2026_03_21_1900-c5a7d2e8f301_.py  2026_03_22_1519-f64ed985464a_.py  2026_04_16_0303-9ba09ee663f1_.py  2026_04_16_0857-0ff947975284_.py  2026_04_20_0744-f21b15c4a471_.py  2026_04_20_1222-e5fa437aca6d_.py  2026_04_20_1533-1148f1c1dd5d_.py  2026_04_21_0423-963006142936_.py  2026_04_21_0511-9afdd17e4b8a_.py  2026_04_21_0823-ac99a7cad22d_.py  2026_04_21_0847-ad3df6025a77_.py  2026_04_21_1711-a8b07e1cef14_.py  2026_04_21_1720-0e7841728f87_.py  2026_04_22_1642-b7a51e6a8033_.py  2026_04_22_1707-a9bcfd81ef18_.py  (+4 more)
app/api/: __init__.py
app/core/: __init__.py  celery.py  redis.py  redis_cache.py  research_pipeline.py  research_starter.py  sql.py
app/crud/: model.py  model_output.py  page_summary.py  research.py  research_epoch.py  scrapped_page.py  user.py
app/models/: __init__.py  base.py  chunk_summary.py  model.py  model_output.py  page_summary.py  research.py  research_epoch.py  research_schedule.py  scrapped_page.py  user.py  user_notification.py
app/schemas/: model.py  research.py  user.py
app/services/: data_fetch.py  llm_client.py  page_cleaner.py  prompts.py  searxng_client.py  web_scraper.py
app/tasks/: research.py
app/templates/: base.html
app/utils/: __init__.py  case_converter.py  datetime.py  dependencies.py  jwt.py  middlewares.py  secrets.py  validates.py
app/web/: __init__.py  auth.py  forms.py  index.py  main.py  models.py  popup.py  popups.py  researches.py
docs/: api-endpoints.md  architecture.md  celery.md  data-models.md  research-flow.md  scenarios.drawio
research/research-service/: .env.template  docker-compose.yml  pyproject.toml
research/research-service/app/: config.py  main.py
research/research-service/app/alembic/: env.py
research/research-service/app/alembic/versions/: 2025_10_21_1304-2ec4a71e4891_.py  2025_10_21_1835-30a07ec0d85a_.py
research/research-service/app/api/: __init__.py
research/research-service/app/api/v1/: __init__.py  research.py
research/research-service/app/models/: __init__.py  base.py  db_gateway.py  research.py  status.py
research/research-service/app/routers/: __init__.py
research/research-service/app/routers/v1/: __init__.py  research.py
searxng/: settings.yml
services/models/models-selector-service/: Dockerfile  pyproject.toml
services/models/models-selector-service/app/: config.py  main.py
services/models/models-selector-service/app/api/v1/: __init__.py  predictions.py
services/models/models-selector-service/app/cruds/: redis.py
services/models/models-selector-service/app/schemas/: predictions.py
services/models/models-selector-service/app/services/: predictions.py
services/models/models-selector-service/app/utils/: predictions.py
services/models/models-selector-service/notebooks/: model_download.ipynb  model_inference.ipynb
services/models/models-service/: Dockerfile  pyproject.toml
services/models/models-service/app/: config.py  main.py
services/models/models-service/app/core/: sql.py
services/models/models-service/notebooks/: model_download.ipynb
(+67 files in other folders)
