[project]
name = "WideResearcher"
version = "0.1.0"
description = ""
authors = [{ name = "Nikita Aspaev", email = "asspaev@yandex.ru" }]
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "redis[asyncio] (>=7.0.1,<8.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "psycopg[async,binary] (>=3.2.11,<4.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
