[project]
name = "research-service"
version = "0.1.0"
description = "Responsible for research"
authors = [
    {name = "Nikita Aspaev",email = "asspaev@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
