[project]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = [{ name = "Nikita Aspaev", email = "asspaev@yandex.ru" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "psycopg[async,binary] (>=3.2.11,<4.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "huggingface-hub (>=0.14.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "vllm (>=0.11.0,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
